--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
                 <version>${revision}</version>
             </dependency>
             <dependency>
+                <groupId>io.growtogether.com</groupId>
+                <artifactId>infrastructure-mysqlAdapter</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.growtogether.com</groupId>
+                <artifactId>user-application</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
@@ -88,6 +98,11 @@
                                 <version>${lombok-mapstruct-binding.version}</version>
                             </path>
                         </annotationProcessorPaths>
+                        <compilerArgs>
+                            <compilerArg>
+                                -Amapstruct.defaultComponentModel=spring
+                            </compilerArg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
             </plugins>
