--- a/user/user-infrastructure/mysqlAdapter/pom.xml
+++ b/user/user-infrastructure/mysqlAdapter/pom.xml
@@ -9,7 +9,7 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>mysqlAdapter</artifactId>
+    <artifactId>infrastructure-mysqlAdapter</artifactId>
 
     <dependencies>
         <dependency>
@@ -17,12 +17,10 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>io.growtogether.com</groupId>
             <artifactId>user-domain</artifactId>
