feat(security): enhance JWT authentication with resource roles extraction

--- a/finbill-application/src/main/resources/application.yaml
+++ b/finbill-application/src/main/resources/application.yaml
@@ -26,7 +26,10 @@ spring:
     open-in-view: false
     main:
       lazy-initialization: true
-
+jwt:
+  auth:
+    converter:
+      resource-id: aouth-growtogether-api-client
 server:
   port: 8080
 
